--- a/src/components/SellingOverviewArticle.css
+++ b/src/components/SellingOverviewArticle.css
@@ -1,5 +1,18 @@
-article, h3, p{
-    margin: 10px;
-    border: 1px solid #ddd;
-    align-content: center;
+.TVContainer{
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    margin: 0 10px;
+    background-color: #e7f2f8;
+    padding: 20px;
+    border-radius: 5px;
+    border-color: #e7f2f8;
+}
+ h3{
+    color: #333;
+    margin-bottom: 5px;
+}
+ p{
+    font-size: 24px;
+    color: #333;
 }
